fix backdrop jumping on android / #20

--- a/src/scss/basic/_backdrop.scss
+++ b/src/scss/basic/_backdrop.scss
@@ -6,7 +6,7 @@
   z-index: -10;
 
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   background-size: cover;
   background-repeat: no-repeat;
